--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@
 
 @layer components {
   .pattern {
-    @apply bg-hero-pattern w-full h-screen bg-center bg-cover absolute z-0;
+    @apply bg-hero-pattern w-screen h-screen bg-center bg-cover absolute z-0;
   }
 
   .wrapper {
@@ -142,12 +142,8 @@
   }
 }
 
-@utility text-gradient-1 {
+@utility text-gradient {
   @apply bg-linear-to-r from-[#D6C7FF] to-[#AB8BFF] bg-clip-text text-transparent;
-}
-
-@utility text-gradient-2 {
-  @apply bg-linear-to-r from-[#f3e295] to-[#fcda40] bg-clip-text text-transparent;
 }
 
 @utility fancy-text {
